--- a/repos/apache-mynewt-core/hw/bsp/decawave-tdoa-anchor/bsp.yml
+++ b/repos/apache-mynewt-core/hw/bsp/decawave-tdoa-anchor/bsp.yml
@@ -18,18 +18,18 @@
 #
 
 bsp.arch: cortex_m4
-bsp.compiler: compiler/arm-none-eabi-m4
+bsp.compiler: "@apache-mynewt-core/compiler/arm-none-eabi-m4"
 bsp.linkerscript:
-    - "hw/bsp/stm32f429discovery/stm32f429discovery.ld"
-    - "hw/mcu/stm/stm32f4xx/stm32f429.ld"
+    - "hw/bsp/decawave-tdoa-anchor/decawave-tdoa-anchor.ld"
+    - "@apache-mynewt-core/hw/mcu/stm/stm32f4xx/stm32f429.ld"
 bsp.linkerscript.BOOT_LOADER.OVERWRITE:
-    - "hw/bsp/stm32f429discovery/boot-stm32f429discovery.ld"
-    - "hw/mcu/stm/stm32f4xx/stm32f429.ld"
+    - "hw/bsp/decawave-tdoa-anchor/boot-decawave-tdoa-anchor.ld"
+    - "@apache-mynewt-core/hw/mcu/stm/stm32f4xx/stm32f429.ld"
 
-bsp.downloadscript: "hw/bsp/stm32f429discovery/stm32f429discovery_download.sh"
-bsp.debugscript: "hw/bsp/stm32f429discovery/stm32f429discovery_debug.sh"
-bsp.downloadscript.WINDOWS.OVERWRITE: "hw/bsp/stm32f429discovery/stm32f429discovery_download.cmd"
-bsp.debugscript.WINDOWS.OVERWRITE: "hw/bsp/stm32f429discovery/stm32f429discovery_debug.cmd"
+bsp.downloadscript: "hw/bsp/decawave-tdoa-anchor/decawave-tdoa-anchor_download.sh"
+bsp.debugscript: "hw/bsp/decawave-tdoa-anchor/decawave-tdoa-anchor_debug.sh"
+bsp.downloadscript.WINDOWS.OVERWRITE: "hw/bsp/decawave-tdoa-anchor/decawave-tdoa-anchor_download.cmd"
+bsp.debugscript.WINDOWS.OVERWRITE: "hw/bsp/decawave-tdoa-anchor/decawave-tdoa-anchor_debug.cmd"
 
 bsp.flash_map:
     areas:
