--- a/repos/apache-mynewt-core/hw/bsp/decawave-tdoa-anchor/pkg.yml
+++ b/repos/apache-mynewt-core/hw/bsp/decawave-tdoa-anchor/pkg.yml
@@ -19,13 +19,12 @@
 
 pkg.name: hw/bsp/decawave-tdoa-anchor
 pkg.type: bsp
-pkg.description: BSP definition for the stm32f4 discovery board.
+pkg.description: BSP definition for the Decawave TDOA anchor board.
 pkg.author: "Apache Mynewt <dev@mynewt.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
     - stm32
     - stm32f429
-    - discovery
     - dw1000
 
 pkg.cflags: -DSTM32F429xx -mfloat-abi=hard -mfpu=fpv4-sp-d16
@@ -34,10 +33,12 @@ pkg.cflags.HARDFLOAT:
     - -mfloat-abi=hard -mfpu=fpv4-sp-d16
 
 pkg.deps:
-    - hw/mcu/stm/stm32f4xx
-    - libc/baselibc
+    - "@apache-mynewt-core/hw/mcu/stm/stm32f4xx"
+    - "@apache-mynewt-core/libc/baselibc"
 
 pkg.deps.UART_0:
-    - hw/drivers/uart/uart_hal
+    - "@apache-mynewt-core/hw/drivers/uart/uart_hal"
 pkg.deps.DW1000_DEVICE_0:
     - '@mynewt-dw1000-core/hw/drivers/dw1000'
+pkg.deps.ETH_0:
+    - "@apache-mynewt-core/hw/drivers/lwip/stm32_eth"
