--- a/repos/apache-mynewt-core/hw/bsp/decawave-tdoa-anchor/syscfg.yml
+++ b/repos/apache-mynewt-core/hw/bsp/decawave-tdoa-anchor/syscfg.yml
@@ -30,6 +30,9 @@ syscfg.defs:
     TIMER_2:
         description: 'Timer 2'
         value: 0
+    ETH_0:
+        description: 'Ethernet driver for LwIP'
+        value: 0
     DW1000_DEVICE_0:
         description: 'DW1000 Device Enable'
         value:  0
