--- a/apps/blinky-uart/pkg.yml
+++ b/apps/blinky-uart/pkg.yml
@@ -6,7 +6,7 @@
 # to you under the Apache License, Version 2.0 (the
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
-#
+# 
 #  http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing,
@@ -17,18 +17,15 @@
 # under the License.
 #
 
-repo.name: apache-mynewt-nimble
-repo.versions:
-    "0.0.0": "master"
+pkg.name: apps/blinky-uart
+pkg.type: app
+pkg.description: Basic example application which blinks an LED and UART print.
+pkg.author: "Apache Mynewt <dev@mynewt.apache.org>"
+pkg.homepage: "http://mynewt.apache.org/"
+pkg.keywords:
 
-    "0-dev": "0.0.0"
-    "0-latest": "1.0.0"
-    "1-latest": "1.0.0"
-
-    "1.0.0": "nimble_1_0_0_tag"
-
-    "1.0-latest": "1.0.0"
-
-repo.newt_compatibility:
-    0.0.0:
-        1.1.0: good
+pkg.deps:
+    - "@apache-mynewt-core/kernel/os"
+    - "@apache-mynewt-core/hw/hal"
+    - "@apache-mynewt-core/sys/console/full"
+    - "@apache-mynewt-core/sys/log/stub"
