--- a/repos/apache-mynewt-core/hw/bsp/nucleo-144/syscfg.yml
+++ b/repos/apache-mynewt-core/hw/bsp/nucleo-144/syscfg.yml
@@ -6,7 +6,7 @@
 # to you under the Apache License, Version 2.0 (the
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
-# 
+#
 #  http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing,
@@ -17,22 +17,34 @@
 # under the License.
 #
 
-pkg.name: apps/cpu-timer-nordic
-pkg.type: app
-pkg.description: Basic example application which blinks an LED.
-pkg.author: "Apache Mynewt <dev@mynewt.apache.org>"
-pkg.homepage: "http://mynewt.apache.org/"
+syscfg.defs:
+    STM32_FLASH_SIZE_KB:
+        description: 'Total flash size in KB.'
+        value: 2048
 
-pkg.deps:
-    - "@apache-mynewt-core/kernel/os"
-    - "@apache-mynewt-core/hw/hal"
-    - "@apache-mynewt-core/sys/console/full"
-    - "@apache-mynewt-core/hw/hal"
-    - "@apache-mynewt-core/hw/mcu/nordic/nrf52xxx"
-    - "@apache-mynewt-core/libc/baselibc"
+    STM32_FLASH_NUM_AREAS:
+        description: 'Amount of flash sectors for a non-linear STM32 MCU.'
+        value: 25
 
-pkg.cflags:
-    - "-std=gnu99"
-    - "-fms-extensions"
+    UART_0:
+        description: 'UART 0'
+        value: 1
+    TIMER_0:
+        description: 'Timer 0'
+        value: 1
+    TIMER_1:
+        description: 'Timer 1'
+        value: 0
+    TIMER_2:
+        description: 'Timer 2'
+        value: 0
+    ETH_0:
+        description: 'Ethernet driver for LwIP'
+        value: 0
 
-    
+syscfg.vals:
+    REBOOT_LOG_FLASH_AREA: FLASH_AREA_REBOOT_LOG
+    CONFIG_FCB_FLASH_AREA: FLASH_AREA_NFFS
+    NFFS_FLASH_AREA: FLASH_AREA_NFFS
+    COREDUMP_FLASH_AREA: FLASH_AREA_IMAGE_1
+    SPI_0_MASTER: 1
